# spin-anomaly4

./: Cargo.toml  README.md  justfile  spin.toml
.github/workflows/: deploy.yml
api/: Cargo.toml
api/src/: jwks.rs  jwt.rs  lib.rs
backend/: Cargo.toml
backend/src/: auth.rs  jwks.rs  jwt.rs  lib.rs  repository.rs  service.rs  utils.rs
frontend/: Cargo.toml  index.html
frontend/locales/: en.json  fr.json
frontend/src/: main.rs
frontend/src/api/: api.rs  mod.rs
frontend/src/components/: auth0.rs  auth_button.rs  flags.rs  game_content.rs  header.rs  mod.rs  sample.rs
frontend/src/pages/: admin.rs  game.rs  home.rs  mod.rs
frontend/style/: main.scss
