[package]
name = "api"
authors = ["jlcanela <jlcanelam@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.115"
jsonwebtoken = "9.3.0"
jwt = "0.16.0"
reqwest = "0.12.3"
tracing = "0.1.40"
chrono = "0.4.38"
