[package]
name = "backend"
authors = ["jlcanela <jlcanelam@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.115"
spin-sdk = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.3", features = ["json"] }
jsonwebtoken = "9.3.0"
api = { path = "../api" }
