[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptonic = { version = "0.5.0", features = ["csr"] }
leptos = { version = "0.6.5", features = ["csr"] }
leptos_meta = { version = "0.6.5", features = ["csr"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

#leptonic = { version = "0.6.0", features = [ "csr" ] }
#leptos = { version = "0.6.9", features = ["csr", "nightly"] }
#leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_oidc = "0.4.1"
#leptos_router = { version = "0.6.9", features = ["csr", "nightly"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.115"
#tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
url = "2.5.0"
# leptos_i18n = { version = "0.3", features = [ "csr", "nightly" ] }


[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]
